fix slider thumb display on Firefox

--- a/frontend/web/style/style.css
+++ b/frontend/web/style/style.css
@@ -55,7 +55,7 @@ input:hover {
     border-color: white;
 }
 
-input[type="file"] {
+input[type=file] {
     display: none;
 }
 
@@ -74,6 +74,14 @@ input[type=range]::-webkit-slider-thumb {
     height: 16px;
     border-radius: 50%;
     background-color: var(--color-main);
+}
+input[type=range]::-moz-range-thumb {
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: var(--color-main);
+    border: none;
 }
 .section input[type=range] + span {
     display: block;
